--- a/movie/index.html
+++ b/movie/index.html
@@ -25,7 +25,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, nihil!</p>
         </div>
     </div>
-
+<!-- продолжить с 9.07 минин -> конструктор сайтов-->
     <div class="row">
         <div class="col-sm">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, nihil!
